// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`page.render: string 1`] = `
<div>
  <div>
    String
  </div>
</div>
`;

exports[`render: file 1`] = `
<div>
  <div>
    HTMLFile
  </div>
</div>
`;

exports[`render: string 1`] = `
<div>
  <div>
    String
  </div>
</div>
`;

exports[`renderFile 1`] = `
<div>
  <div>
    HTMLFile
  </div>
</div>
`;

exports[`renderString 1`] = `
<div>
  <div>
    String
  </div>
</div>
`;
